fix(ui) Fix overflow bug for expandable things.

--- a/hub/ui/static/style/main.css
+++ b/hub/ui/static/style/main.css
@@ -336,6 +336,7 @@ main {
         transform: translateY(70vh);
         height: 0;
         width: 0;
+        overflow: hidden;
     }
 
     .thing--expandable[aria-expanded = "true"] > .thing--expandable-long {
